force-app/main/default/objects/ucinn_ascendv2__Custom_Contact_Report_Setting__c/ucinn_ascendv2__Custom_Contact_Report_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Custom Contact Report Setting</label>
</CustomObject>