force-app/main/default/objects/ucinn_ascendv2__Custom_Contact_Report_Setting__c/fields/ucinn_ascendv2__Add_Secondary_Constituents_Section_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Add_Secondary_Constituents_Section_Name__c</fullName>
    <description>Use this to override the &quot;Add Secondary Constituent&quot; section name.</description>
    <inlineHelpText>Use this to override the &quot;Add Secondary Constituent&quot; section name.</inlineHelpText>
    <label>Add Secondary Constituents Section Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>