force-app/main/default/objects/ucinn_ascendv2__Custom_Contact_Report_Setting__c/fields/ucinn_ascendv2__Base_Object__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Base_Object__c</fullName>
    <description>Object that the Contact Report is created on. Leave blank to use this setting as the default.</description>
    <inlineHelpText>Object that the Contact Report is created on. Leave blank to use this setting as the default.</inlineHelpText>
    <label>Base Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>