force-app/main/default/objects/ucinn_ascendv2__Custom_Contact_Report_Setting__c/fields/ucinn_ascendv2__Default_Number_of_Secondary_Constituents__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Default_Number_of_Secondary_Constituents__c</fullName>
    <label>Default Number of Secondary Constituents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>