force-app/main/default/objects/ucinn_ascendv2__Custom_Contact_Report_Setting__c/fields/ucinn_ascendv2__Disabled_Fundraiser_Fields__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Disabled_Fundraiser_Fields__c</fullName>
    <label>Disabled Fundraiser Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>