force-app/main/default/objects/ucinn_ascendv2__Custom_Contact_Report_Setting__c/fields/ucinn_ascendv2__Enable_Default_Values_For_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_Default_Values_For_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prepopulate the Contact and Account lookup fields when creating a new contact report from Opportunity.</description>
    <inlineHelpText>Prepopulate Contact and Account lookup fields when creating a contact from Opportunity.</inlineHelpText>
    <label>Enable Default Values For Opportunity</label>
    <type>Checkbox</type>
</CustomField>