force-app/main/default/objects/ucinn_ascendv2__Custom_Contact_Report_Setting__c/fields/ucinn_ascendv2__Fundraiser_Default__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fundraiser_Default__c</fullName>
    <description>Default Fundraiser lookup value. Enter a specific User ID or enter $User.Id for the current logged in User.</description>
    <inlineHelpText>Default Fundraiser lookup value. Enter a specific User ID or enter $User.Id for the current logged in User.</inlineHelpText>
    <label>Fundraiser Default</label>
    <length>255</length>
    <type>Text</type>
</CustomField>