force-app/main/default/objects/ucinn_ascendv2__Custom_Contact_Report_Setting__c/fields/ucinn_ascendv2__Fundraiser_Label__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fundraiser_Label__c</fullName>
    <description>Use this to override the &quot;Fundraiser&quot; label.</description>
    <inlineHelpText>Use this to override the &quot;Fundraiser&quot; label.</inlineHelpText>
    <label>Fundraiser Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>