force-app/main/default/objects/ucinn_ascendv2__Custom_Contact_Report_Setting__c/fields/ucinn_ascendv2__Fundraiser_Work_Plan_Default__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fundraiser_Work_Plan_Default__c</fullName>
    <description>Default Work Plan lookup value. Uses a specific Work Plan ID.</description>
    <inlineHelpText>Default Work Plan lookup value. Uses a specific Work Plan ID.</inlineHelpText>
    <label>Fundraiser Work Plan Default</label>
    <length>255</length>
    <type>Text</type>
</CustomField>