force-app/main/default/objects/ucinn_ascendv2__Custom_Contact_Report_Setting__c/fields/ucinn_ascendv2__Minimum_Number_of_Fundraisers__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Minimum_Number_of_Fundraisers__c</fullName>
    <description>If this value is set, then the New Contact Report form will have at least this many Fundraiser rows pre-created, with the delete buttons disabled.

Use in conjunction with at least one &quot;Require Fundraiser&quot; setting.</description>
    <inlineHelpText>If this value is set, then the New Contact Report form will have at least this many Fundraiser rows pre-created, with the delete buttons disabled.

Use in conjunction with at least one &quot;Require Fundraiser&quot; setting.</inlineHelpText>
    <label>Minimum Number of Fundraisers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>