force-app/main/default/objects/ucinn_ascendv2__Custom_Contact_Report_Setting__c/fields/ucinn_ascendv2__Prevent_Creation_If_User_Not_Assigned__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Prevent_Creation_If_User_Not_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent Creation If User Not Assigned</label>
    <type>Checkbox</type>
</CustomField>