force-app/main/default/objects/ucinn_ascendv2__Custom_Contact_Report_Setting__c/fields/ucinn_ascendv2__Prevent_Creation_Message__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Prevent_Creation_Message__c</fullName>
    <label>Prevent Creation Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>