force-app/main/default/objects/ucinn_ascendv2__Custom_Contact_Report_Setting__c/fields/ucinn_ascendv2__Redirect_Record_On_Save__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Redirect_Record_On_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Redirect Record On Save</label>
    <type>Checkbox</type>
</CustomField>