force-app/main/default/objects/ucinn_ascendv2__Custom_Contact_Report_Setting__c/fields/ucinn_ascendv2__Require_Fundraiser_Role__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Require_Fundraiser_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to require the Fundraiser Role field on the Contact Report.</description>
    <inlineHelpText>Check to require the Fundraiser Role field on the Contact Report.</inlineHelpText>
    <label>Require Fundraiser Role</label>
    <type>Checkbox</type>
</CustomField>