force-app/main/default/objects/ucinn_ascendv2__Custom_Contact_Report_Setting__c/fields/ucinn_ascendv2__Require_Secondary_Constituent__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Require_Secondary_Constituent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to require the Secondary Constituent field on the Contact Report.</description>
    <inlineHelpText>Check to require the Secondary Constituent field on the Contact Report.</inlineHelpText>
    <label>Require Secondary Constituent</label>
    <type>Checkbox</type>
</CustomField>