force-app/main/default/objects/ucinn_ascendv2__Custom_Contact_Report_Setting__c/fields/ucinn_ascendv2__Secondary_Constituent_Default__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Secondary_Constituent_Default__c</fullName>
    <description>Default Secondary Constituent lookup value. Uses a specific Contact ID.</description>
    <inlineHelpText>Default Secondary Constituent lookup value. Uses a specific Contact ID.</inlineHelpText>
    <label>Secondary Constituent Default</label>
    <length>255</length>
    <type>Text</type>
</CustomField>