force-app/main/default/objects/ucinn_ascendv2__Custom_Contact_Report_Setting__c/fields/ucinn_ascendv2__Secondary_Constituent_Role_Default__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Secondary_Constituent_Role_Default__c</fullName>
    <description>Default value for the Constituent Role picklist on the Secondary Constituent&apos;s Contact Report Relation.</description>
    <inlineHelpText>Default value for the Constituent Role picklist on the Secondary Constituent&apos;s Contact Report Relation.</inlineHelpText>
    <label>Secondary Constituent Role Default</label>
    <length>255</length>
    <type>Text</type>
</CustomField>